# computational-intelligence

./: 4-friends.ipynb  LICENSE.md  pyproject.toml  set-covering-informed.ipynb  set-covering.ipynb
labs/: Halloween.ipynb
labs/lab1/: a-star-comparison.ipynb  set-covering-a-star.ipynb
labs/lab10/: README.md  lab10.ipynb
labs/lab2/: README.md  lab2-nim.ipynb
labs/lab9/: README.md  lab9.ipynb
lectures/: Halloween.ipynb  lab10-gx.ipynb  set-covering-informed.ipynb
quixo/: README.md  main.py
