[tool.poetry]
name = "ci-code"
version = "0.1.0"
description = ""
authors = ["ANDREA GALELLA s310166 <s310166@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
networkx = "^3.2"
pydot = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
